cmake_minimum_required(VERSION 3.14)
project(procon)

set(CMAKE_CXX_STANDARD 14)

add_executable(procon main.cpp alds/0205.cpp alds/0302.c alds/0403.c alds/0403.c alds/0404.cpp alds/0405.cpp alds/0406.cpp alds/0407.cpp alds/0408.cpp alds/0409.cpp alds/0501.c alds/0502.c alds/0503.c alds/0504.cpp alds/0505.cpp alds/0506.cpp alds/0507.cpp alds/0601.c alds/0602.cpp alds/0701.cpp alds/0702.c alds/0703.cpp alds/0704.cpp alds/0705.c alds/0706.cpp alds/0707.cpp alds/0801.cpp alds/0802.cpp alds/0803.c alds/0804.cpp atcoder/atcoder.cpp alds/0904.cpp alds/0905.cpp alds/1001.cpp alds/1002.cpp alds/1003.cpp alds/1004.cpp alds/1101.cpp alds/1102.cpp)